--- a/makerslist/static/less/navbar.less
+++ b/makerslist/static/less/navbar.less
@@ -163,4 +163,8 @@ div.navbar {
       margin-top: 15px;
     }
   }
+
+  div#app.edit {
+    background: none !important;
+  }
 }
